samples/_failures_safe/1761725159_bfe8d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95ac76be.c: In function ‘main’:
./samples/SAFE/__tmp_95ac76be.c:198:5: error: expected expression at end of input
  198 |     if (token_count == 0)
      |     ^~
./samples/SAFE/__tmp_95ac76be.c:198:5: error: expected declaration or statement at end of input
